# vol_cl_tools

./: .gitignore  LICENSE  Makefile  README.md  README_vol2vol.md  build_msvc.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml
lib/: vol_basis.cpp  vol_geom.c
samples/: cone_hdr.vol  cone_seq.vol  counter.webm  cube_seq.vol  quad_seq.vol
tools/ct_vols/: CMakeLists.txt  main.cpp
tools/cutvols/: CMakeLists.txt  main.cpp  vols_cutter.cpp  vols_cutter.hpp
tools/vol2obj/: main.c
tools/vol2vol/: basis_encoder_wrapper.cpp  basis_encoder_wrapper.h  main.c  video_processing.c  video_processing.h
